terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/ingress_clash/deny_update_existing_clash/case.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1beta1
request:  # Fully-qualified group/version/kind of the incoming object
  kind:
    group: networking.k8s.io
    version: v1
    kind: Ingress

  operation: "UPDATE"
  # Name of the resource being modified
  name: ing-0

  # Namespace of the resource being modified, if the resource is namespaced (or is a Namespace object)
  namespace: default-0

  object:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: ing-0
      namespace: default-0
      annotations:
        external-dns.alpha.kubernetes.io/aws-weight: "100"
        external-dns.alpha.kubernetes.io/set-identifier: ing-0-default-blue
    spec:
      rules:
      - host: ing-1.example.com
        http:
          paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80

  oldObject:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: ing-0
      namespace: default-0
      annotations:
        external-dns.alpha.kubernetes.io/aws-weight: "100"
        external-dns.alpha.kubernetes.io/set-identifier: ing-0-default-blue
    spec:
      rules:
      - host: ing-0.example.com
        http:
          paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
